--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,10 @@
 <section id="admin">
     <div class="wrapper">
         <nav id="sidebar">
+            <h1 class="dashboard-title pt-2 pl-2">
+                <span>Amnesia</span>
+            </h1>
+            <h2 class="dashboard-subtitle pt-2 pl-3">Dashboard</h2>
             <ul class="list-unstyled components">
                 <!-- <p><i class="fas fa-tachometer-alt"></i> Dashboard</p> -->
                 <p><i class="fas fa-users"></i> Users</p>
