--- a/src/app/components/admin-all-orders/admin-all-orders.component.html
+++ b/src/app/components/admin-all-orders/admin-all-orders.component.html
@@ -32,10 +32,10 @@
             <tbody>
               <tr id="{{order._id}}" *ngFor="let order of allData">
                 <td>{{order._id}}</td>
-                <td>{{order.userId.firstname}} {{order.userId.lastname}}</td>
-                <td>{{order.userId.email}}</td>
-                <td>{{order.createdAt}}</td>
-                <td>$ {{order.totalPrice}}</td>
+                <td>{{order.userId?.firstname || "N/A"}} {{order.userId?.lastname || "N/A"}}</td>
+                <td>{{order.userId?.email || "N/A"}}</td>
+                <td>{{order?.createdAt}}</td>
+                <td>$ {{order?.totalPrice}}</td>
                 <td *ngIf="order.orderStatus=='pending'" style="color:#E0A800"><span>Pending</span></td>
                 <td *ngIf="order.orderStatus=='accepted'" style="color:#3A9D5D"><span>Accepted</span></td>
                 <td *ngIf="order.orderStatus=='canceled'" style="color:#F63C3A"><span>Rejected</span></td>
