--- a/src/app/components/admin-product-add/admin-product-add.component.html
+++ b/src/app/components/admin-product-add/admin-product-add.component.html
@@ -5,7 +5,7 @@
       <div class="form-group row rounded-0">
         <label for="img" class="col-sm-2 col-form-label">Image: </label>
         <div class="col-sm-10">
-          <input type="file" class="form-control" id="img">
+          <input type="file" class="form-control" #imageInput id="img">
         </div>
       </div>
       <div class="form-group row">
@@ -45,7 +45,7 @@
       </div>
       <div class="form-group row">
         <div class="col-sm-10">
-          <button type="submit" class="btn success rounded-0" id="add" (click)="add()" 
+          <button type="submit" class="btn success rounded-0" id="add" (click)="add(imageInput)" 
           [disabled]="(product.name?.length < 3) || (product.description?.length <= 0)"
           >Add</button>
           <button type="reset" class="btn danger rounded-0" id="cancel" (click)="cancel()">Cancel</button>
