--- a/src/app/components/admin-product-edit/admin-product-edit.component.html
+++ b/src/app/components/admin-product-edit/admin-product-edit.component.html
@@ -8,7 +8,7 @@
       <div class="form-group row rounded-0">
         <label for="img" class="col-sm-2 col-form-label">Image: </label>
         <div class="col-sm-10">
-          <input type="file" class="form-control" id="img">
+          <input type="file" class="form-control" #imageInput (change)="onUpload($event)" id="img">
         </div>
       </div>
       <div class="form-group row">
@@ -49,7 +49,7 @@
       <div class="form-group row">
         <div class="col-sm-10">
           <button type="submit" class="btn success rounded-0" id="save" 
-          (click)="save()"
+          (click)="save(imageInput)"
           [disabled]="product.name?.length < 3 || product.description?.length <= 0"
           >Save</button>
           <button type="reset" class="btn danger rounded-0" id="cancel" (click)="cancel()">Cancel</button>
