--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
