--- a/src/app/components/admin-product-add/admin-product-add.component.html
+++ b/src/app/components/admin-product-add/admin-product-add.component.html
@@ -5,6 +5,7 @@
       <div class="form-group row rounded-0">
         <label for="img" class="col-sm-2 col-form-label">Image: </label>
         <div class="col-sm-10">
+          <div class="text-danger" *ngIf="imageRequired">image is required</div>
           <input type="file" class="form-control" #imageInput id="img">
         </div>
       </div>
