--- a/src/app/components/admin-product-edit/admin-product-edit.component.html
+++ b/src/app/components/admin-product-edit/admin-product-edit.component.html
@@ -8,7 +8,7 @@
       <div class="form-group row rounded-0">
         <label for="img" class="col-sm-2 col-form-label">Image: </label>
         <div class="col-sm-10">
-          <input type="file" class="form-control" #imageInput (change)="onUpload($event)" id="img">
+          <input type="file" class="form-control" #imageInput value="product.image" (change)="onUpload($event)" id="img">
         </div>
       </div>
       <div class="form-group row">
