adding user order list

--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -24,6 +24,8 @@
                 <span></span>
             </button>
             <div id="cont">
+                <h1 class="main-title text-danger" style="text-decoration: underline;">Dashboard</h1>
+                <hr>
                 <router-outlet></router-outlet>
             </div>
         </div>
