--- a/src/app/components/admin-product-edit/admin-product-edit.component.html
+++ b/src/app/components/admin-product-edit/admin-product-edit.component.html
@@ -1,4 +1,5 @@
 <section id="editProduct">
+  <h1>Edit Product</h1>
   <div class="wrapper">
     <div *ngIf="isFetching" class="text-center">
       <mat-spinner class="loading d-inline-block"></mat-spinner>
