--- a/src/app/components/admin-all-orders/admin-all-orders.component.html
+++ b/src/app/components/admin-all-orders/admin-all-orders.component.html
@@ -1,4 +1,5 @@
 <section id="orders">
+  <h1>Clients' Orders</h1>
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-10">
