--- a/src/app/components/admin-products/admin-products.component.html
+++ b/src/app/components/admin-products/admin-products.component.html
@@ -1,4 +1,5 @@
 <section id="products">
+  <h1>Our Products</h1>
   <div class="container">
     <div class="row searchwrapper">
       <input type="text" name="" id="" [(ngModel)]="pname" (input)="searching()" class="search" placeholder="Search for product name...">
